mullvad-daemon/src/migrations/multihop/snapshots/mullvad_daemon__migrations__multihop__test__scenario_2-2.snap
---
source: mullvad-daemon/src/migrations/multihop/mod.rs
expression: "serde_json::to_string_pretty(&settings)?"
---
{
  "relay_settings": {
    "normal": {
      "location": "any",
      "ownership": "any",
      "providers": "any",
      "wireguard_constraints": {
        "allowed_ips": "any",
        "entry_location": "any",
        "entry_ownership": "any",
        "entry_providers": "any",
        "ip_version": "any",
        "multihop": "auto"
      }
    }
  },
  "tunnel_options": {
    "wireguard": {
      "daita": true,
      "mtu": null,
      "quantum_resistant": null,
      "rotation_interval": null
    }
  }
}
