mullvad-daemon/src/migrations/multihop/snapshots/mullvad_daemon__migrations__multihop__test__scenario_3a.snap
---
source: mullvad-daemon/src/migrations/multihop/mod.rs
expression: "serde_json::to_string_pretty(&settings)?"
---
{
  "custom_lists": {
    "custom_lists": []
  },
  "relay_settings": {
    "normal": {
      "location": "any",
      "ownership": {
        "only": "MullvadOwned"
      },
      "providers": {
        "only": [
          "31337"
        ]
      },
      "wireguard_constraints": {
        "allowed_ips": "any",
        "entry_location": "any",
        "entry_ownership": "any",
        "entry_providers": "any",
        "ip_version": "any",
        "use_multihop": false
      }
    }
  },
  "tunnel_options": {
    "wireguard": {
      "daita": {
        "enabled": true,
        "use_multihop_if_necessary": true
      },
      "mtu": null,
      "quantum_resistant": null,
      "rotation_interval": null
    }
  }
}
